# McuCubeProgrammer

./: .gitignore  .pylintrc  LICENSE  README.md  l10n.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml  labeler.yml
.github/workflows/: pr-labeler.yml  pylint.yml  python-build.yml  python-publish.yml
docs/: 功能开发计划.md  架构文档.md
locales/: app_en.arb  app_zh.arb
src/: __init__.py  app.py  main.py
src/backend/: __init__.py  error_codes.py  interface.py  pyocd_backend.py
src/i18n/: __init__.py
src/logic/: __init__.py  flash_controller.py  probe_manager.py  target_manager.py
src/ui/: __init__.py  state.py  theme.py
src/ui/components/: __init__.py  file_picker.py  flash_panel.py  log_view.py  probe_selector.py  target_selector.py  waveform_dialog.py
src/ui/panels/: connection_panel.py
src/ui/tabs/: __init__.py  about_tab.py  chip_info_tab.py  debug_tab.py  flash_tab.py  log_tab.py  probe_tab.py  settings_tab.py  swo_tab.py
src/utils/: __init__.py  config.py  elf_parser.py  logger.py
tests/: __init__.py  conftest.py  test_flash_controller.py  test_logger.py  test_probe_manager.py  test_pyocd_backend.py  test_target_manager.py
